--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 * {
     margin: 0;
     padding: 0;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    background-color: #003B4F;
+}
+
+input {
+    color: black;
 }
 
 #shop-layout-ui {
-    border: 3px black solid;
+    border: 3px #08262C solid;
+    background-color: #E8B00F;
 }
 
 .shop-element{
@@ -12,4 +23,10 @@
     background-color: blue;
     height: 50px;
     width: 50px;
+}
+
+.btn {
+    background-color: #08262C;
+    padding: 5px 10px;
+    border-radius: 3px;
 }
