--- a/style.css
+++ b/style.css
@@ -25,8 +25,23 @@ input {
     width: 50px;
 }
 
+.heading{
+    text-align: center;
+    margin: 5px;
+    height: 40px;
+}
+
 .btn {
     background-color: #08262C;
     padding: 5px 10px;
     border-radius: 3px;
+}
+
+.btn:active {
+    background-color: white;
+    color: #08262C
+}
+
+#toolbar {
+    display:flex 
 }
