--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    color: white;
     font-family: 'Roboto', sans-serif;
 }
 
 body {
     background-color: #003B4F;
+    color: white;
 }
 
 input {
@@ -21,8 +21,6 @@ input {
 .shop-element{
     position: absolute;
     background-color: blue;
-    height: 50px;
-    width: 50px;
 }
 
 .heading{
@@ -31,10 +29,24 @@ input {
     height: 40px;
 }
 
+.modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    display: none;
+}
+
 .btn {
     background-color: #08262C;
     padding: 5px 10px;
     border-radius: 3px;
+    color: white;
+    margin: 0 5px;
 }
 
 .btn:active {
@@ -43,5 +55,7 @@ input {
 }
 
 #toolbar {
-    display:flex 
+    display:flex;
+    align-items: center;
+    margin: 10px;
 }
