add window sizing to csv input and output

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ input {
 .shop-element{
     position: absolute;
     background-color: blue;
+    box-shadow: -3px 3px 10px rgba(0, 0, 0, .7);
 }
 
 .heading{
